marking up some HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header-content">
+        <nav class="nav-header">
+           <a class="home" href="index.html">Home</a> 
+           <a class="about" href="about.html">About</a>
+           <a class="contact" href="contact.html">Contact</a> 
+           <a class="project" href="projects.html">Project</a>
+        </nav>
+
+    </header>
     
 </body>
 </html>
